<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:useDefaultMargins="true"
    android:columnCount="6" >

    <TextView
        android:layout_columnSpan="6"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv_name"
        android:textSize="20dp" />

    <TextView
        android:text="@string/tv_username"
        android:layout_gravity="right" />

    <EditText
        android:id="@+id/et_username"
        android:hint="请输入账号"
        android:ems="8"
        android:layout_columnSpan="2"/>

    <TextView
        android:text="@string/tv_password"
        android:layout_column="0"
        android:layout_gravity="right"/>

    <EditText
        android:id="@+id/et_password"
        android:hint="请输入密码"
        android:ems="8"
        android:layout_columnSpan="2" />

    <Button
        android:id="@+id/bt_clear"
        android:text="@string/bt_clear"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/bt_login"
        android:text="@string/bt_login"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:id="@+id/register"
        android:textColor="#008BFA"
        android:layout_column="4"
        android:onClick="OnRegisterClick"
        android:text="@string/tv_register"/>
</GridLayout>
